--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,3 +1,8 @@
+body {
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -font-family: 'PT Sans',sans-serif;
+}
 body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-family: 'PT Sans', sans-serif;
 }
 a { color: inherit;
@@ -37,4 +42,25 @@ img + ul { margin-top: 77px;
 h2 + img { margin-top: 82px;
 }
 h3 + img { margin-top: 81px;
+}
+ul li {
+  list-style-type: square;
+  width: : 700px;
+  margin-left: 20px;
+}
+blockquote{
+  position: relative;
+}
+blockquote::before {
+  content:  '';
+  background: black;
+  width: 3px;
+  height: 100%;
+  display: block;
+  position: absolute;
+  left: -20px;
+  top: 0; 
+}
+
+
 }
