--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 body {
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -59,8 +62,38 @@ blockquote::before {
   display: block;
   position: absolute;
   left: -20px;
-  top: 0; 
+  top: 0;
 }
 
-
+.menubar {
+  position: fixed;
+  top: 0;
+  display: block;
+  height: 60px;
+  width: 100%;
+  border-bottom: 1px solid #bbb;
+  display: flex;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: (255,255,255,0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 1px 8px 1px rgba(179, 179, 179, 1);
+  z-index: 10;
+}
+.menubar img {
+  height: 20px;
+  margin: 0;
+  width: auto;
+}
+.menubar span a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #999;
+  margin-left: 30px;
+}
+.menubar span a:hover {
+  color: green;
+  transition: color .4s easy;
 }
